--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -1,24 +1,34 @@
-<header class="header">
-  <div class="logo">
-    <div class="site-name">
-      {{settings.site_name1}}
-    </div>
-    {{#link 'help_center'}}
+<header>
+  <div class="header">
+    <div class="logo">
+      <div class="site-name">
+        {{settings.site_name1}}
+      </div>
+      {{#link 'help_center'}}
       <img src="{{settings.logo}}" alt="{{t 'home_page' name=help_center.name}}">
-    {{/link}}
-    <div class="site-name">
-      {{settings.site_name2}}
+      {{/link}}
+      <div class="site-name">
+        {{settings.site_name2}}
+      </div>
+    </div>
+    <div class="gg-phone-num">
+      {{settings.phone_number}}
+    </div>
+    <div class="nav-wrapper">
+      {{user_info}}
     </div>
   </div>
-  <div class="gg-phone-num">
-    {{settings.phone_number}}
-  </div>
-  <div class="nav-wrapper">
-    <span class="icon-menu" tabindex="0" role="button" aria-controls="user-nav" aria-expanded="false" aria-label="{{t 'toggle_navigation'}}"></span>
+  <div class="primary-nav-wrapper">
+    <div class="hamburger-menu">
+      <span class="icon-menu" tabindex="0" role="button" aria-controls="user-nav" aria-expanded="false" aria-label="{{t 'toggle_navigation'}}">Menu</span>
+    </div>
     <nav class="user-nav" id="user-nav">
-      {{link 'community'}}
-      {{link 'new_request' class='submit-a-request'}}
+      <ul>
+        <li><a href="{{settings.main_site_link}}">{{settings.main_site_link_text}}</a></li>
+        <li>{{#link 'help_center'}}Support Home{{/link}}</li>
+        <li>{{link 'community'}}</li>
+        <li>{{link 'new_request' class='submit-a-request'}}</li>
+      </ul>
     </nav>
-    {{user_info}}
   </div>
 </header>
