--- a/style.css
+++ b/style.css
@@ -796,7 +796,7 @@ header {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
-  background-color: #fff;
+  background-color: transparent;
   color: #777;
   content: "\1F50D";
   font-size: 18px;
@@ -810,7 +810,12 @@ header {
 }
 
 .search-full input[type="search"] {
-  border: 1px solid #fff;
+    border: 1px solid #000;
+    background: rgba(255,255,255,0.7);
+    height: 80px;
+    color: black;
+    border-radius: 0;
+    font-size: 26px;
 }
 
 /***** Hero component *****/
@@ -828,7 +833,7 @@ header {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
-  max-width: 610px;
+  max-width: 800px;
   margin: 0 auto;
 }
 
@@ -928,8 +933,8 @@ header {
 }
 
 .blocks-item {
-  border: 1px solid $brand_color;
-  border-radius: 4px;
+  border: 1px solid black;
+  border-radius: 0;
   box-sizing: border-box;
   color: $brand_color;
   display: flex;
@@ -939,6 +944,7 @@ header {
   margin: 0 0 30px;
   max-width: 100%;
   text-align: center;
+  background-color: #fafafa;
 }
 
 @media (min-width: 768px) {
@@ -948,7 +954,8 @@ header {
 }
 
 .blocks-item:hover, .blocks-item:focus, .blocks-item:active {
-  background-color: $brand_color;
+    background-color: $brand_color;
+    border: 1px solid $brand_color;
 }
 
 .blocks-item:hover *, .blocks-item:focus *, .blocks-item:active * {
@@ -973,7 +980,7 @@ header {
 }
 
 .blocks-item-link {
-  color: $brand_color;
+  color: black;
   padding: 20px 30px;
 }
 
