Make footer text and help center name customizable

--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -26,7 +26,7 @@
     <nav class="user-nav" id="user-nav">
       <ul>
         <li><a class="site-back" href="{{settings.main_site_link}}">{{settings.main_site_link_text}}</a></li>
-        <li>{{#link 'help_center'}}Support{{/link}}</li>
+        <li>{{#link 'help_center'}}{{settings.help_center_name}}{{/link}}</li>
         <li>{{link 'community'}}</li>
         <li>{{link 'new_request' class='submit-a-request'}}</li>
       </ul>
