--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -1,16 +1,16 @@
 <header>
   <div class="header">
-    <div class="logo">
-      <div class="site-name">
-        {{settings.site_name1}}
+    <a class="site-back" href="{{settings.main_site_link}}">
+      <div class="logo">
+        <div class="site-name">
+          {{settings.site_name1}}
+        </div>
+        <img src="{{settings.logo}}" alt="{{t 'home_page' name=help_center.name}}">
+        <div class="site-name">
+          {{settings.site_name2}}
+        </div>
       </div>
-      {{#link 'help_center'}}
-      <img src="{{settings.logo}}" alt="{{t 'home_page' name=help_center.name}}">
-      {{/link}}
-      <div class="site-name">
-        {{settings.site_name2}}
-      </div>
-    </div>
+    </a>
     <div class="gg-phone-num">
       <i class="fa fa-phone" aria-hidden="true"></i>
       {{settings.phone_number}}
@@ -23,13 +23,5 @@
     <div class="hamburger-menu">
       <span class="icon-menu" tabindex="0" role="button" aria-controls="user-nav" aria-expanded="false" aria-label="{{t 'toggle_navigation'}}">Menu</span>
     </div>
-    <nav class="user-nav" id="user-nav">
-      <ul>
-        <li><a class="site-back" href="{{settings.main_site_link}}">{{settings.main_site_link_text}}</a></li>
-        <li>{{#link 'help_center'}}{{settings.help_center_name}}{{/link}}</li>
-        <li>{{link 'community'}}</li>
-        <li>{{link 'new_request' class='submit-a-request'}}</li>
-      </ul>
-    </nav>
   </div>
 </header>
