--- a/style.css
+++ b/style.css
@@ -850,7 +850,7 @@ header {
 /***** Hero component *****/
 .hero {
   background-color: #fafafa;
-  height: 300px;
+  height: 280px;
   padding: 0 20px;
   text-align: center;
   width: 100%;
@@ -863,7 +863,12 @@ header {
   max-width: 800px;
   margin: 0 auto;
 }
-
+.hero h1 {
+    color:#666;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 0;
+}
 .page-header {
   display: flex;
   flex-direction: column;
