--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -1,5 +1,7 @@
 <section class="section hero">
   <div class="hero-inner">
+    <h1>{{settings.help_center_name}}</h1>
+    <h4>{{settings.help_center_subtitle}}</h4>
     {{search submit=false instant=settings.instant_search class='search search-full'}}
   </div>
 </section>
