--- a/templates/document_head.hbs
+++ b/templates/document_head.hbs
@@ -1,2 +1,3 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 <link rel='stylesheet' id='bfa-font-awesome-css'  href='//cdn.jsdelivr.net/fontawesome/4.7.0/css/font-awesome.min.css?ver=4.7.0' type='text/css' media='all' />
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
