--- a/templates/article_page.hbs
+++ b/templates/article_page.hbs
@@ -1,8 +1,14 @@
+<section class="section hero">
+  <div class="hero-inner">
+    <h1>{{settings.help_center_name}}</h1>
+    <h4>{{settings.help_center_subtitle}}</h4>
+    {{search submit=false instant=settings.instant_search class='search search-full'}}
+  </div>
+</section>
 <div class="container-divider"></div>
 <div class="container">
   <nav class="sub-nav">
     {{breadcrumbs}}
-    {{search scoped=settings.scoped_kb_search submit=false}}
   </nav>
 
   <div class="article-container" id="article-container">
