--- a/style.css
+++ b/style.css
@@ -873,6 +873,9 @@ header {
     font-weight: bold;
     margin-bottom: 0;
 }
+.hero h4 {
+    color: #999;
+}
 .page-header {
   display: flex;
   flex-direction: column;
