--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -11,6 +11,14 @@
     <section class="categories blocks">
       <ul class="blocks-list">
         {{#each categories}}
+          {{#if ../has_multiple_categories}}
+          <li class="blocks-item">
+            <a href='{{url}}' class="blocks-item-link">
+              <h4 class="blocks-item-title">{{name}}</h4>
+              <p class="blocks-item-description">{{excerpt description}}</p>
+            </a>
+          </li>
+          {{else}}
             {{#each sections}}
               <li class="blocks-item">
                 <a href='{{url}}' class="blocks-item-link">
@@ -36,6 +44,7 @@
                 </a>
               </li>
             {{/each}}
+          {{/if}}
         {{/each}}
       </ul>
       {{pagination}}
